1999-10-12  Emmanuel Briot  <briot@gnat.com>

	* ada-stmt.el: Doc-string fixes.

1999-10-12  Gerd Moellmann  <gerd@gnu.org>

	* recentf.el: New file.

	* ps-mode.el: New file.

	* files.el (auto-mode-alist): Add ps-mode for .eps and .ps,
	case insensitive.

1999-10-12  Richard Sharman  <rsharman@pobox.com>

	* sh-script.el: Added support for indenting existing scripts.
	(sh-mode-map): Added new bindings.
	(sh-mode): Updated mode doc-string for new commands, added
	make-local-variable calls, initialize mode-specific variables.
	(sh-indent-line):  Renamed to sh-basic-indent-line;  sh-indent-line
	is now a different function.
	(sh-header-marker):  Changed docstring.
	(sh-set-shell): Initialize mode-specific variables.
	(sh-case, sh-for, sh-if, sh-indexed-loop, sh-repeat, sh-select)
	(sh-tmp-file, sh-until, sh-until, sh-while, sh-while-getopts):
	Changed these define-skeleton calls to work with user-specified
	indentation settings.
	(sh-basic-indent-line, sh-blink, sh-calculate-indent)
	(sh-check-paren-in-case, sh-check-rule, sh-do-nothing)
	(sh-electric-hash, sh-electric-less, sh-electric-rparen)
	(sh-find-prev-matching, sh-find-prev-switch, sh-get-indent-info)
	(sh-get-indent-var-for-line, sh-get-kw, sh-get-word)
	(sh-goto-match-for-done, sh-goto-matching-case, sh-goto-matching-if)
	(sh-guess-basic-offset, sh-handle-after-case-label)
	(sh-handle-prev-case, sh-handle-prev-case-alt-end, sh-handle-prev-do)
	(sh-handle-prev-done, sh-handle-prev-else, sh-handle-prev-esac)
	(sh-handle-prev-fi, sh-handle-prev-if, sh-handle-prev-open)
	(sh-handle-prev-rc-case, sh-handle-prev-then, sh-handle-this-close)
	(sh-handle-this-do, sh-handle-this-done, sh-handle-this-else)
	(sh-handle-this-esac, sh-handle-this-fi, sh-handle-this-rc-case)
	(sh-handle-this-then, sh-help-string-for-variable)
	(sh-in-comment-or-string, sh-indent-line, sh-learn-buffer-indent)
	(sh-learn-line-indent, sh-load-style, sh-make-vars-local, sh-mark-init)
	(sh-mark-line, sh-mkword-regexpr, sh-mkword-regexp)